--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <p> GitHub Pages Test Successful </p>
 
 <a href="/portfolio/unity/Blasteroids_html5/blasteroids_html5.html" target="_blank">Unity Test</a>
+<a href="/portfolio/r/notebook.nb.html" target="_blank">R Notebook Test</a>
 
 <p>Test</p>
 
