--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 <a href="/portfolio/unity/Blasteroids_html5/blasteroids_html5.html" target="_blank">Unity Test</a>
 <a href="/portfolio/r/notebookTest.nb.html" target="_blank">R Notebook Test</a>
 
-<p>Test</p>
+<div w3-include-html="/portfolio/r/notebookTest.nb.html"></div>
+
+<p>Test A</p>
 
 </body>
 </html>
