--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
 
 
 
-<title>Test Website</title>
+<title>About Me</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -193,12 +193,12 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">Test Website</h1>
+<h1 class="title toc-ignore">About Me</h1>
 
 </div>
 
 
-<p>Hello, World!</p>
+<p>Test info about me.</p>
 
 
 
