--- a/3D.html
+++ b/3D.html
@@ -11,7 +11,7 @@
 
 
 
-<title>About Me</title>
+<title>3D Projects</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -208,12 +208,12 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">About Me</h1>
+<h1 class="title toc-ignore">3D Projects</h1>
 
 </div>
 
 
-<p>Test info about me.</p>
+<p>3D projects I’ve completed.</p>
 
 
 
