--- a/index.html
+++ b/index.html
@@ -181,6 +181,21 @@ $(document).ready(function () {
 <li>
   <a href="about.html">About Me</a>
 </li>
+<li>
+  <a href="video.html">Video</a>
+</li>
+<li>
+  <a href="game.html">Games</a>
+</li>
+<li>
+  <a href="3D.html">3D</a>
+</li>
+<li>
+  <a href="3D.html">2D</a>
+</li>
+<li>
+  <a href="contact.html">Contact</a>
+</li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         
