--- a/contact.html
+++ b/contact.html
@@ -192,7 +192,13 @@ $(document).ready(function () {
   <a href="3D.html">3D</a>
 </li>
 <li>
-  <a href="3D.html">2D</a>
+  <a href="2D.html">2D</a>
+</li>
+<li>
+  <a href="presentations.html">Presentations</a>
+</li>
+<li>
+  <a href="publications.html">Publications</a>
 </li>
 <li>
   <a href="contact.html">Contact</a>
@@ -214,7 +220,9 @@ $(document).ready(function () {
 </div>
 
 
-<p>Let’s get in touch! <img src="graphics/icons/linkedin/2-Color/In-2C-21px-R.png" alt="LinkedIn Profile" /></p>
+<p>Let’s get in touch!</p>
+<p><a href="https://www.linkedin.com/in/adam-santone-9a5a6a3/"><embed src="img%20src=%22graphics/icons/linkedin/2-color/In-2C-21px-R.png%22" /></a></p>
+<p><a href="https://www.researchgate.net/profile/Adam_Santone"><embed src="img%20src=%22graphics/icons/researchGate/rg_180.png%22%20height=%2221%22%20width=%2221%22" /></a></p>
 
 
 
