--- a/game.html
+++ b/game.html
@@ -192,7 +192,13 @@ $(document).ready(function () {
   <a href="3D.html">3D</a>
 </li>
 <li>
-  <a href="3D.html">2D</a>
+  <a href="2D.html">2D</a>
+</li>
+<li>
+  <a href="presentations.html">Presentations</a>
+</li>
+<li>
+  <a href="publications.html">Publications</a>
 </li>
 <li>
   <a href="contact.html">Contact</a>
