--- a/presentations.html
+++ b/presentations.html
@@ -11,7 +11,7 @@
 
 
 
-<title>Test Website</title>
+<title>Presentations</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -215,12 +215,12 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">Test Website</h1>
+<h1 class="title toc-ignore">Presentations</h1>
 
 </div>
 
 
-<p>Hello, World!</p>
+<p>Some presentations</p>
 
 
 
