--- a/contact.html
+++ b/contact.html
@@ -221,8 +221,8 @@ $(document).ready(function () {
 
 
 <p>Let’s get in touch!</p>
-<p><a href="https://www.linkedin.com/in/adam-santone-9a5a6a3/"><embed src="img%20src=%22graphics/icons/linkedin/2-color/In-2C-21px-R.png%22" /></a></p>
-<p><a href="https://www.researchgate.net/profile/Adam_Santone"><embed src="img%20src=%22graphics/icons/researchGate/rg_180.png%22%20height=%2221%22%20width=%2221%22" /></a></p>
+<p><embed src="img%20src=%22graphics/icons/linkedin/2-color/In-2C-21px-R.png%22" />(<a href="https://www.linkedin.com/in/adam-santone-9a5a6a3/" class="uri">https://www.linkedin.com/in/adam-santone-9a5a6a3/</a>)</p>
+<p><embed src="img%20src=%22graphics/icons/researchGate/rg_180.png%22%20height=%2221%22%20width=%2221%22" />(<a href="https://www.researchgate.net/profile/Adam_Santone" class="uri">https://www.researchgate.net/profile/Adam_Santone</a>)</p>
 
 
 
