--- a/contact.html
+++ b/contact.html
@@ -221,7 +221,7 @@ $(document).ready(function () {
 
 
 <p>Let’s get in touch!</p>
-<p><a href="https://www.linkedin.com/in/adam-santone-9a5a6a3/"><img src="graphics/icons/linkedin/2-Color/In-2C-21px-R.png" alt="LinkedIn" /></a> <img src="graphics/icons/researchGate/rg_180.png" alt="Research Gate" />(<a href="https://www.researchgate.net/profile/Adam_Santone" class="uri">https://www.researchgate.net/profile/Adam_Santone</a>)</p>
+<p><a href="https://www.linkedin.com/in/adam-santone-9a5a6a3/"><img src="graphics/icons/linkedin/2-Color/In-2C-21px-R.png" alt="LinkedIn" /></a> <a href="https://www.researchgate.net/profile/Adam_Santone"><embed src="graphics/icons/researchGate/rg_180.png%20=21x21" /></a></p>
 
 
 
