--- a/contact.html
+++ b/contact.html
@@ -221,8 +221,7 @@ $(document).ready(function () {
 
 
 <p>Let’s get in touch!</p>
-<p><a href="https://www.linkedin.com/in/adam-santone-9a5a6a3/"><img src="graphics/icons/linkedin/2-Color/In-2C-21px-R.png" alt="LinkedIn" /></a> <a href="https://www.researchgate.net/profile/Adam_Santone"><embed src="graphics/icons/researchGate/rg_180.png%20=21x21" /></a></p>
-<p><a href="https://www.researchgate.net/profile/Adam_Santone"><img src="img%20src=%22/graphics/icons/researchGate/rg_180.png%22%20alt=%22Research%20Gate%22%20style=%22width:%2021px;%22/" alt="Research Gate" /></a></p>
+<p><a href="https://www.linkedin.com/in/adam-santone-9a5a6a3/"><img src="graphics/icons/linkedin/2-Color/In-2C-21px-R.png" alt="LinkedIn" /></a>{:height=“21px” width=“21px”} <a href="https://www.researchgate.net/profile/Adam_Santone"><img src="graphics/icons/researchGate/rg_180.png" alt="Research Gate" /></a>{:height=“25px” width=“25px”}</p>
 
 
 
