--- a/contact.html
+++ b/contact.html
@@ -220,8 +220,17 @@ $(document).ready(function () {
 </div>
 
 
+<pre><code>img[alt=&quot;LinkedIn&quot;] { 
+  max-width:  21px; 
+  display: block;
+}
+
+img[alt=&quot;ResearchGate&quot;] { 
+  max-width:  25px; 
+  display: block;
+}</code></pre>
 <p>Let’s get in touch!</p>
-<p><a href="https://www.linkedin.com/in/adam-santone-9a5a6a3/"><img src="graphics/icons/linkedin/2-Color/In-2C-21px-R.png" alt="LinkedIn" /></a>{:height=“21px” width=“21px”} <a href="https://www.researchgate.net/profile/Adam_Santone"><img src="graphics/icons/researchGate/rg_180.png" alt="Research Gate" /></a>{:height=“25px” width=“25px”}</p>
+<p><a href="https://www.linkedin.com/in/adam-santone-9a5a6a3/"><img src="graphics/icons/linkedin/2-Color/In-2C-21px-R.png" alt="LinkedIn" /></a> <a href="https://www.researchgate.net/profile/Adam_Santone"><img src="graphics/icons/researchGate/rg_180.png" alt="ResearchGate" /></a></p>
 
 
 
