--- a/contact.html
+++ b/contact.html
@@ -231,6 +231,7 @@ img[alt=&quot;ResearchGate&quot;] {
 }</code></pre>
 <p>Let’s get in touch!</p>
 <p><a href="https://www.linkedin.com/in/adam-santone-9a5a6a3/"><img src="graphics/icons/linkedin/2-Color/In-2C-21px-R.png" alt="LinkedIn" /></a> <a href="https://www.researchgate.net/profile/Adam_Santone"><img src="graphics/icons/researchGate/rg_180.png" alt="ResearchGate" /></a></p>
+<p><a href="https://www.linkedin.com/in/adam-santone-9a5a6a3/"><img src="graphics/icons/linkedin/2-Color/In-2C-21px-R.png" align="left" height="48" width="48" ></a></p>
 
 
 
