--- a/contact.html
+++ b/contact.html
@@ -220,17 +220,8 @@ $(document).ready(function () {
 </div>
 
 
-<pre><code>img[alt=&quot;LinkedIn&quot;] { 
-  max-width:  21px; 
-  display: block;
-}
-
-img[alt=&quot;ResearchGate&quot;] { 
-  max-width:  25px; 
-  display: block;
-}</code></pre>
 <p>Let’s get in touch!</p>
-<p><a href="https://www.linkedin.com/in/adam-santone-9a5a6a3/"><img src="graphics/icons/linkedin/2-Color/In-2C-21px-R.png" align="left" height="25" width="25" ></a> <a href="https://www.researchgate.net/profile/Adam_Santone"><img src="graphics/icons/researchGate/rg_180.png" align="left" height="25" width="25" ></a></p>
+<p><a href="https://www.linkedin.com/in/adam-santone-9a5a6a3/"><img src="graphics/icons/linkedin/2-Color/In-2C-21px-R.png" align="left"></a> <a href="https://www.researchgate.net/profile/Adam_Santone"><img src="graphics/icons/researchGate/rg_180.png" align="left" height="21" width="21" ></a></p>
 
 
 
