--- a/video.html
+++ b/video.html
@@ -67,6 +67,7 @@ h6 {
 </style>
 
 <link rel="stylesheet" href="style.css" type="text/css" />
+<link rel="stylesheet" href="add.css" type="text/css" />
 
 </head>
 
