--- a/code.html
+++ b/code.html
@@ -11,7 +11,7 @@
 
 
 
-<title>Presentations</title>
+<title>Code</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -217,12 +217,12 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">Presentations</h1>
+<h1 class="title toc-ignore">Code</h1>
 
 </div>
 
 
-<p>Some presentations</p>
+<p>Code Projects</p>
 
 
 
