--- a/data.html
+++ b/data.html
@@ -194,6 +194,8 @@ $(document).ready(function () {
 <li>
   <a href="2D.html">2D</a>
 </li>
+<li class="dropdown-header">Data</li>
+<li class="dropdown-header">Code</li>
 <li>
   <a href="presentations.html">Presentations</a>
 </li>
