--- a/about.html
+++ b/about.html
@@ -228,14 +228,17 @@ body {
     background-image: url("graphics/img/palms.jpg");
 }
 
-div.textbox {
-  margin: 0px;
-  background-color: #000000;
-  border: none;
-  opacity: 0.4;
-  filter: alpha(opacity=40); /* For IE8 and earlier */
+.textbox{
+  background:rgba(0,0,0,0.4);
+  text-align:left;
 }
-p{ color: #ffffff;}
+.textbox p{
+  font-family:arial;
+  text-align:left;
+  font-size:26px;
+  font-weight:normal;
+  color:#ffffff;
+}
 
 </style>
 </head>
