--- a/contact.html
+++ b/contact.html
@@ -185,8 +185,6 @@ $(document).ready(function () {
 <li>
   <a href="video.html">Video</a>
 </li>
-<li class="dropdown-header">Data</li>
-<li class="dropdown-header">Code</li>
 <li>
   <a href="game.html">Games</a>
 </li>
@@ -195,6 +193,12 @@ $(document).ready(function () {
 </li>
 <li>
   <a href="2D.html">2D</a>
+</li>
+<li>
+  <a href="data.html">Data</a>
+</li>
+<li>
+  <a href="code.html">Code</a>
 </li>
 <li>
   <a href="presentations.html">Presentations</a>
