bg color update
bg color

--- a/about.html
+++ b/about.html
@@ -231,12 +231,12 @@ $(document).ready(function () {
 body {
     /*background-image: url("graphics/img/palms.jpg");*/
     color:#ffffff;
-    background: -webkit-gradient(linear, center top, center bottom, from(#917c4d), to(#ffffff)) fixed;
-    background: -webkit-linear-gradient(#be3c5a, #fabe73) fixed;
-    background: -moz-linear-gradient(#be3c5a, #fabe73) fixed;
-    background: -o-linear-gradient(#be3c5a, #fabe73) fixed;
-    background: -ms-linear-gradient(#be3c5a, #fabe73) fixed;
-    background: linear-gradient(#be3c5a, #fabe73) fixed;
+    background: -webkit-gradient(linear, center top, center bottom, from  (#0f3443), to(#34e89e)) fixed;
+    background: -webkit-linear-gradient                                   (#0f3443, #34e89e) fixed;
+    background: -moz-linear-gradient                                      (#0f3443, #34e89e) fixed;
+    background: -o-linear-gradient                                        (#0f3443, #34e89e) fixed;
+    background: -ms-linear-gradient                                       (#0f3443, #34e89e) fixed;
+    background: linear-gradient                                           (#0f3443, #34e89e) fixed;
 }
 </style>
 </head>
