--- a/3D.html
+++ b/3D.html
@@ -226,7 +226,12 @@ $(document).ready(function () {
 </div>
 
 
-<p>3D projects I’ve completed.</p>
+<div id="ceramics" class="section level2">
+<h2>Ceramics</h2>
+<ul>
+<li>Custom Lamp (Arduino + Sensors + LED)</li>
+</ul>
+</div>
 
 
 
