--- a/about.html
+++ b/about.html
@@ -231,7 +231,7 @@ $(document).ready(function () {
 body {
     /*background-image: url("graphics/img/palms.jpg");*/
     color:#ffffff;
-    background: ##093637;
+    background-color: ##093637;
     /*background: -webkit-gradient(linear, center top, center bottom, from (#093637), to(#44a08d)) fixed;*/
     /*background: -webkit-linear-gradient (#093637, #44a08d) fixed;*/
     /*background: -moz-linear-gradient (#093637, #44a08d) fixed;*/
