--- a/game.html
+++ b/game.html
@@ -230,6 +230,7 @@ $(document).ready(function () {
 <h2>Unity</h2>
 <ul>
 <li><a href="../portfolio/unity/Blasteroids_html5/blasteroids_html5.html">Blasteroids</a></li>
+<li><a href="../portfolio/unity/Blasteroids_html5/blasteroids_html5.html" target="_blank">Blasteroids</a></li>
 </ul>
 </div>
 
