--- a/3D.html
+++ b/3D.html
@@ -226,6 +226,7 @@ $(document).ready(function () {
 </div>
 
 
+<p><span class="citation">@import</span> ‘custom.css’;</p>
 <div id="ceramics" class="section level2">
 <h2>Ceramics</h2>
 <ul>
