--- a/3D.html
+++ b/3D.html
@@ -227,11 +227,26 @@ $(document).ready(function () {
 
 
 <style> @import 'custom.css'; </style>
-<div id="ceramics" class="section level2">
-<h2>Ceramics</h2>
-<ul>
-<li>Custom Lamp (Arduino + Sensors + LED)</li>
-</ul>
+<!-- Pitchers -->
+<div class="polaroid">
+<img src="../graphics/img/ceramics/pitchers_800_600.jpg" alt="Pitchers" style="width:100%">
+<div class="container">
+<pre><code>&lt;p&gt;Stoneware Pitchers&lt;/p&gt;</code></pre>
+</div>
+</div>
+<!-- Pitchers -->
+<div class="polaroid">
+<img src="../graphics/img/ceramics/pitchers_800_600.jpg" alt="Pitchers" style="width:100%">
+<div class="container">
+<pre><code>&lt;p&gt;Stoneware Pitchers&lt;/p&gt;</code></pre>
+</div>
+</div>
+<!-- Pitchers -->
+<div class="polaroid">
+<img src="../graphics/img/ceramics/pitchers_800_600.jpg" alt="Pitchers" style="width:100%">
+<div class="container">
+<pre><code>&lt;p&gt;Stoneware Pitchers&lt;/p&gt;</code></pre>
+</div>
 </div>
 
 
