--- a/3D.html
+++ b/3D.html
@@ -228,25 +228,8 @@ $(document).ready(function () {
 
 <style> @import 'custom.css'; </style>
 <!-- Pitchers -->
-<div class="polaroid">
-<img src="../graphics/img/ceramics/pitchers_800_600.jpg" alt="Pitchers" style="width:100%">
-<div class="container">
-<pre><code>&lt;p&gt;Stoneware Pitchers&lt;/p&gt;</code></pre>
-</div>
-</div>
-<!-- Pitchers -->
-<div class="polaroid">
-<img src="../graphics/img/ceramics/pitchers_800_600.jpg" alt="Pitchers" style="width:100%">
-<div class="container">
-<pre><code>&lt;p&gt;Stoneware Pitchers&lt;/p&gt;</code></pre>
-</div>
-</div>
-<!-- Pitchers -->
-<div class="polaroid">
-<img src="../graphics/img/ceramics/pitchers_800_600.jpg" alt="Pitchers" style="width:100%">
-<div class="container">
-<pre><code>&lt;p&gt;Stoneware Pitchers&lt;/p&gt;</code></pre>
-</div>
+<div <img="" src="../graphics/img/ceramics/pitchers_800_600.jpg" alt="Pitchers" style="width:20%">
+<p><img src="../graphics/img/ceramics/pitchers_800_600.jpg" alt="Pitchers" style="width:20%"> <img src="../graphics/img/ceramics/pitchers_800_600.jpg" alt="Pitchers" style="width:20%"></p>
 </div>
 
 
