--- a/game.html
+++ b/game.html
@@ -226,10 +226,9 @@ $(document).ready(function () {
 </div>
 
 
-<div id="unity" class="section level2">
-<h2>Unity</h2>
+<div id="unity-html-5webgl" class="section level2">
+<h2>Unity (HTML 5/WebGL)</h2>
 <ul>
-<li><a href="../portfolio/unity/Blasteroids_html5/blasteroids_html5.html">Blasteroids</a></li>
 <li><a href="../portfolio/unity/Blasteroids_html5/blasteroids_html5.html" target="_blank">Blasteroids</a></li>
 </ul>
 </div>
