--- a/3D.html
+++ b/3D.html
@@ -228,8 +228,8 @@ $(document).ready(function () {
 
 <style> @import 'custom.css'; </style>
 <!-- Pitchers -->
-<div <img="" src="../graphics/img/ceramics/pitchers_800_600.jpg" alt="Pitchers" style="width:20%">
-<p><img src="../graphics/img/ceramics/pitchers_800_600.jpg" alt="Pitchers" style="width:20%"> <img src="../graphics/img/ceramics/pitchers_800_600.jpg" alt="Pitchers" style="width:20%"></p>
+<div <img="" src="../graphics/img/ceramics/pitchers_800_600.jpg" alt="Pitchers" width="20%">
+<p><img src="../graphics/img/ceramics/pitchers_800_600.jpg" alt="Pitchers" width=20%> <img src="../graphics/img/ceramics/pitchers_800_600.jpg" alt="Pitchers" width=20%></p>
 </div>
 
 
