--- a/about.html
+++ b/about.html
@@ -232,7 +232,12 @@ $(document).ready(function () {
 </div>
 <div id="education" class="section level3">
 <h3>Education</h3>
-<p><em>PhD, Purdue University. Major: Technology, emphasis on human spatial perception and gaming. Dissertation: Visuospatial characterization and analysis of spatial abilities of video game players. Advisor: Gary Bertoline, PhD. </em>MS, Purdue University. Major: Technology, emphasis on interactive 3D computer graphics. Final Project: Interactive Virtual Reality for Education. Advisor: Gary Bertoline, PhD. <em>MS, Purdue University. Major: Horticulture, emphasis on plant physiology and molecular biology. Thesis: Molecular and structural changes in the hypocotyl elongation zone of mechano-stimulated dark-grown (<em>Glycine max</em> L. Merr. cv. Century 84) seedlings. Advisor: Cary Mitchell, PhD. </em>BS, Henderson State University. Major: Biology, emphasis on plant biology.</p>
+<ul>
+<li>PhD, Purdue University. Major: Technology, emphasis on human spatial perception and gaming. Dissertation: Visuospatial characterization and analysis of spatial abilities of video game players. Advisor: Gary Bertoline, PhD.</li>
+<li>MS, Purdue University. Major: Technology, emphasis on interactive 3D computer graphics. Final Project: Interactive Virtual Reality for Education. Advisor: Gary Bertoline, PhD.</li>
+<li>MS, Purdue University. Major: Horticulture, emphasis on plant physiology and molecular biology. Thesis: Molecular and structural changes in the hypocotyl elongation zone of mechano-stimulated dark-grown (<em>Glycine max</em> L. Merr. cv. Century 84) seedlings. Advisor: Cary Mitchell, PhD.</li>
+<li>BS, Henderson State University. Major: Biology, emphasis on plant biology.</li>
+</ul>
 </div>
 
 
