--- a/about.html
+++ b/about.html
@@ -239,6 +239,12 @@ $(document).ready(function () {
 <li>BS, Henderson State University. Major: Biology, emphasis on plant biology.</li>
 </ul>
 </div>
+<div id="recent-experience" class="section level3">
+<h3>Recent Experience</h3>
+<p>Most recently, I worked at the Learning Systems Institute at Florida State University for 5+ years in research and development related to K-12 STEM teacher professional development. In this really interesting position, I studied and implemented novel methods for curriculum development and teacher professional development. Along the way, I developed educational standards maps, over 350 short-format documentaries, many 3D-printable models and associated lesson plans, over 40 interactive student tutorials, and many statistics training modules for science teachers (see code tab).</p>
+<p>Before that, I served as a Fellow for the National Science Foundation Graduate Students in K-12 Education (GK-12) Program. I partnered with an 8th-grade teacher and we collaborated to bring data visualization lessons to middle school students. We eventually published my lesson on creating and studying the social network generated from a simulated virus spreading through the population.</p>
+<p>Another great experience I had was as a Project Counselor with the NASA Spaceflight and Life Sciences Training Program (SLSTP), administered by Tuskeegee University and hosted at the Life Sciences Laboratory at Kennedy Space Center in Cape Canaveral, Florida. Along with two other PCs, I mentored a group of undergraduate students over six weeks as they got first-hand research experience with NASA experts.</p>
+</div>
 
 
 
