--- a/3D.html
+++ b/3D.html
@@ -228,9 +228,16 @@ $(document).ready(function () {
 
 <style> @import 'custom.css'; </style>
 <!-- Pitchers -->
-<div <img="" src="../graphics/img/ceramics/pitchers_800_600.jpg" alt="Pitchers" width="20%">
-<p><img src="../graphics/img/ceramics/pitchers_800_600.jpg" alt="Pitchers" width=20%> <img src="../graphics/img/ceramics/pitchers_800_600.jpg" alt="Pitchers" width=20%></p>
+<div>
+<img src="../graphics/img/ceramics/pitchers_800_600.jpg" alt="Pitchers" width=20%>
 </div>
+<div>
+<img src="../graphics/img/ceramics/pitchers_800_600.jpg" alt="Pitchers" width=20%>
+</div>
+<div>
+<img src="../graphics/img/ceramics/pitchers_800_600.jpg" alt="Pitchers" width=20%>
+</div>
+<p>test</p>
 
 
 
