--- a/3D.html
+++ b/3D.html
@@ -230,12 +230,12 @@ $(document).ready(function () {
 <!-- Pitchers -->
 <div>
 <img src="../graphics/img/ceramics/pitchers_800_600.jpg" alt="Pitchers" width=20%>
+<p>
+Description text
+</p>
 </div>
 <div>
-<img src="../graphics/img/ceramics/pitchers_800_600.jpg" alt="Pitchers" width=20%>
-</div>
-<div>
-<img src="../graphics/img/ceramics/pitchers_800_600.jpg" alt="Pitchers" width=20%>
+<p><img src="../graphics/img/ceramics/pitchers_800_600.jpg" alt="Pitchers" width=20%> <img src="../graphics/img/ceramics/pitchers_800_600.jpg" alt="Pitchers" width=20%></p>
 </div>
 <p>test</p>
 
