--- a/contact.html
+++ b/contact.html
@@ -227,7 +227,8 @@ $(document).ready(function () {
 
 
 <p>Let’s get in touch!</p>
-<p><a href="https://www.linkedin.com/in/adam-santone-9a5a6a3/"><img src="graphics/icons/linkedin/2-Color/In-2C-21px-R.png" align="left"></a> <a href="https://www.researchgate.net/profile/Adam_Santone"><img src="graphics/icons/researchGate/rg_180.png" align="left" height="21" width="21" ></a></p>
+<p><a href="https://www.linkedin.com/in/adam-santone-9a5a6a3/"><img src="graphics/icons/linkedin/2-Color/In-2C-21px-R.png" align="left"></a></p>
+<p><a href="https://www.researchgate.net/profile/Adam_Santone"><img src="graphics/icons/researchGate/rg_180.png" align="left" height="21" width="21" ></a></p>
 
 
 
