--- a/3D.html
+++ b/3D.html
@@ -226,16 +226,9 @@ $(document).ready(function () {
 </div>
 
 
-<style> @import 'custom.css'; </style>
 <!-- Pitchers -->
 <div>
-<img src="../graphics/img/ceramics/pitchers_800_600.jpg" alt="Pitchers" width=20%>
-<p>
-Description text
-</p>
-</div>
-<div>
-<p><img src="../graphics/img/ceramics/pitchers_800_600.jpg" alt="Pitchers" width=20%> <img src="../graphics/img/ceramics/pitchers_800_600.jpg" alt="Pitchers" width=20%></p>
+<p><img src="../graphics/img/ceramics/pitchers_800_600.jpg" alt="Pitchers" width=20%></p>
 </div>
 
 
