--- a/code.html
+++ b/code.html
@@ -226,7 +226,7 @@ $(document).ready(function () {
 </div>
 
 
-<pre><code># Plot the results of the body diffusion observations
+<pre class="r"><code># Plot the results of the body diffusion observations
 # Replace existing data points with your own!
 
 #try out ggplot2 library for graphing
@@ -264,9 +264,18 @@ ratios  = round(ratios, digits=2)
 
 #print out organized data as a data frame
 df&lt;-data.frame(r,lengths,sa,v,ratios,times)
-df
-
-#let&#39;s find the mathematical model that describes the relationship between our log-transformed surface areas and our log-transformed volumes
+df</code></pre>
+<pre><code>##       r lengths   sa     v ratios times
+## 1 2.380      30  484   534   0.91  2.00
+## 2 3.175      39  841  1235   0.68  4.50
+## 3 3.970      47 1271  2327   0.55  8.00
+## 4 4.765      56 1819  3995   0.46 12.25
+## 5 5.555      65 2463  6301   0.39 19.00
+## 6 6.350      73 3166  9247   0.34 22.75
+## 7 7.145      82 4002 13151   0.30 29.50
+## 8 7.740      89 4705 16750   0.28 38.25
+## 9 8.335      95 5412 20734   0.26 44.00</code></pre>
+<pre class="r"><code>#let&#39;s find the mathematical model that describes the relationship between our log-transformed surface areas and our log-transformed volumes
 myModel     = lm(log(sa)~log(v))
 
 #let&#39;s extract the slope and intercept specifically so we can use them to draw a line of best fit
@@ -277,9 +286,9 @@ mySlope     = myModel$coefficients[2]
 #add in the line of best fit using our mathematical model calculations and change the color of the line to stand out
 #scale and color the points to correspond to the data for surface area and volume, respectively
 savPlot &lt;- ggplot(df, aes(x = log(v), y = log(sa), size = sa, fill = v)) + geom_point(shape = 21)+ ggtitle(&quot;log(Surface Area) vs log(Volume)&quot;) + labs(x = &quot;log(Volume)&quot;, y = &quot;log(Surface Area)&quot;)+ scale_fill_continuous(low = &quot;gold&quot;, high = &quot;firebrick&quot;) + scale_size_area(max_size = 8)+ theme_bw() + theme(legend.position = &quot;right&quot;, legend.direction = &quot;vertical&quot;)+ geom_abline(intercept = myIntercept, slope = mySlope, col=&quot;dodgerblue&quot;)
-savPlot
-
-#find relationship of sa to v in log terms
+savPlot</code></pre>
+<p><img src="code_files/figure-html/unnamed-chunk-1-1.png" width="672" /></p>
+<pre class="r"><code>#find relationship of sa to v in log terms
 #we can interpret slope as the percent change in y for a 1 percent change in x
 #cat(&quot;*** A 1 % increase in surface area results in a &quot;, round(mySlope, digits=2), &quot;% increase in volume&quot;,  &quot;\n&quot;)
 
@@ -294,8 +303,8 @@ ratioTimePlot &lt;- ggplot(df, aes(x = ratios, y = times, size = sa, fill = v)) 
 #+ stat_smooth(method = &quot;nls&quot;, formula = &quot;y ~ a*x^b&quot;, start = list(a = 1, b = 1), se = FALSE)
 
 #draw the plot
-ratioTimePlot
-</code></pre>
+ratioTimePlot</code></pre>
+<p><img src="code_files/figure-html/unnamed-chunk-1-2.png" width="672" /></p>
 
 
 
