--- a/code.html
+++ b/code.html
@@ -226,10 +226,12 @@ $(document).ready(function () {
 </div>
 
 
+<div id="statistical-analysis-modules-for-middle-and-high-school-math-and-science-teachers" class="section level3">
+<h3>Statistical Analysis Modules for Middle and High School Math and Science Teachers</h3>
 <ul>
-<li><a href="teacherCode.html">Statistical Analysis Modules for Middle and High School Math and Science Teachers</a></li>
-<li>other project</li>
+<li><a href="../portfolio/r/divEcoCode/caterpillarAdvanced.html">Caterpillar Body Diffusion Observations (advanced)</a></li>
 </ul>
+</div>
 
 
 
