--- a/2D.html
+++ b/2D.html
@@ -195,9 +195,6 @@ $(document).ready(function () {
   <a href="2D.html">2D</a>
 </li>
 <li>
-  <a href="data.html">Data</a>
-</li>
-<li>
   <a href="code.html">Code</a>
 </li>
 <li>
@@ -226,7 +223,7 @@ $(document).ready(function () {
 </div>
 
 
-<p>2D projects I’ve completed.</p>
+<p>From time to time, I enjoy creating 2D art, typically nature photography related to plants, fungi, and small details not normally noticed.</p>
 
 
 
