--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 
 
-<title>Adam Santone, PhD</title>
+<title></title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -172,7 +172,7 @@ $(document).ready(function () {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html">Test Website</a>
+      <a class="navbar-brand" href="index.html">Adam Santone, PhD</a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
@@ -218,7 +218,6 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">Adam Santone, PhD</h1>
 
 </div>
 
@@ -227,6 +226,7 @@ $(document).ready(function () {
 
 body {
     background-image: url("../graphics/img/video/prescribedFire_1200_900.jpg");
+    width: 100%;
     color: #ffffff;
 }
 
