--- a/index.html
+++ b/index.html
@@ -197,27 +197,27 @@
     <!-- Wrapper for slides -->
     <div class="carousel-inner" role="listbox">
       <div class="item active">
-        <img src="ny.jpg" alt="New York" width="1200" height="700">
+        <img src="prescribedFire_1600_900.jpg" alt="TallTimbers" width="1600" height="900">
         <div class="carousel-caption">
-          <h3>New York</h3>
-          <p>The atmosphere in New York is lorem ipsum.</p>
+          <h3>Perspectives Videos</h3>
+          <p>Producer/Director for hundreds of short-format STEM documentary-style videos.</p>
         </div>      
       </div>
 
       <div class="item">
-        <img src="chicago.jpg" alt="Chicago" width="1200" height="700">
+        <img src="prescribedFire_1600_900.jpg" alt="TallTimbers" width="1600" height="900">
         <div class="carousel-caption">
-          <h3>Chicago</h3>
-          <p>Thank you, Chicago - A night we won't forget.</p>
+          <h3>Perspectives Videos</h3>
+          <p>Producer/Director for hundreds of short-format STEM documentary-style videos.</p>
         </div>      
       </div>
     
       <div class="item">
-        <img src="la.jpg" alt="Los Angeles" width="1200" height="700">
+        <img src="prescribedFire_1600_900.jpg" alt="TallTimbers" width="1600" height="900">
         <div class="carousel-caption">
-          <h3>LA</h3>
-          <p>Even though the traffic was a mess, we had the best time playing at Venice Beach!</p>
-        </div>      
+          <h3>Perspectives Videos</h3>
+          <p>Producer/Director for hundreds of short-format STEM documentary-style videos.</p>
+        </div>     
       </div>
     </div>
 
