--- a/index.html
+++ b/index.html
@@ -197,15 +197,15 @@
     <!-- Wrapper for slides -->
     <div class="carousel-inner" role="listbox">
       <div class="item active">
-        <img src="prescribedFire_1600_900.jpg" alt="TallTimbers" width="1600" height="900">
+        <img src="../graphics/img/palms.jpg" alt="Florida Palm Trees" width="1600" height="900">
         <div class="carousel-caption">
-          <h3>Perspectives Videos</h3>
-          <p>Producer/Director for hundreds of short-format STEM documentary-style videos.</p>
+          <h3>Integrated STEAM and 3D Graphics Specialist</h3>
+          <p>Interdisciplinary Research and Development Background related to Integration of Science, Technology, Engineering, Arts, Mathematics, and Education.</p>
         </div>      
       </div>
 
       <div class="item">
-        <img src="prescribedFire_1600_900.jpg" alt="TallTimbers" width="1600" height="900">
+        <img src="../graphics/img/video/prescribedFire_1600_900.jpg" alt="TallTimbers" width="1600" height="900">
         <div class="carousel-caption">
           <h3>Perspectives Videos</h3>
           <p>Producer/Director for hundreds of short-format STEM documentary-style videos.</p>
@@ -213,7 +213,7 @@
       </div>
     
       <div class="item">
-        <img src="prescribedFire_1600_900.jpg" alt="TallTimbers" width="1600" height="900">
+        <img src="../graphics/img/video/prescribedFire_1600_900.jpg" alt="TallTimbers" width="1600" height="900">
         <div class="carousel-caption">
           <h3>Perspectives Videos</h3>
           <p>Producer/Director for hundreds of short-format STEM documentary-style videos.</p>
