update path and filter
update

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   }
   .carousel-inner img {
       -webkit-filter: grayscale(90%);
-      filter: grayscale(90%); /* make all photos black and white */ 
+      filter: grayscale(50%); /* filter effect on all photos */ 
       width: 100%; /* Set width to 100% */
       margin: auto;
   }
@@ -197,7 +197,7 @@
     <!-- Wrapper for slides -->
     <div class="carousel-inner" role="listbox">
       <div class="item active">
-        <img src="../graphics/img/palms_1600_900.jpg" alt="Florida Palm Trees" width="1600" height="900">
+        <img src="../graphics/img/photography/palms_1600_900.jpg" alt="Florida Palm Trees" width="1600" height="900">
         <div class="carousel-caption">
           <h3>Integrated STEAM and 3D Graphics Specialist</h3>
           <p>Interdisciplinary Research and Development Background related to Integration of Science, Technology, Engineering, Arts, Mathematics, and Education</p>
