--- a/index.html
+++ b/index.html
@@ -320,16 +320,16 @@
 	Interdisciplinary researcher/developer with experience in quantitative and qualitative research for interactive 3D computer graphics, human spatial ability, data visualization, virtual and augmented reality, serious games, 3D modeling and printing, documentary-style video production and direction, statistical analysis, and K-12 STEM outreach for teacher professional development. Experience connecting people at local, municipal, state, and federal levels to ensure project success. Extensive background in life sciences including plant physiology and molecular biology with associated laboratory techniques. Career interests include human-computer interactions and interfaces, applications of human spatial ability research to gaming and immersive educational experiences, data science and data-driven decision making, advanced data perception methodologies, technology integration for K-12 education, life science outreach, and public informal STEM education.
   </p>
   <br>
-  <div class="row">
+  <div class="row" align="center">
     <div class="col-sm-4">
       <p class="text-center"><strong>Hey, it's me!</strong></p><br>
-      <a href="#demo" data-toggle="collapse">
+      <a href="#dropText" data-toggle="collapse">
         <img src="../graphics/img/headshot/headshot.png" class="img-circle person" alt="Hi" width="200" height="200">
       </a>
-      <div id="demo" class="collapse">
+      <div id="dropText" class="collapse">
         <p>Team Player</p>
         <p>Loves technical manuals</p>
-        <p>Thinks gaming and science go together quite well</p>
+        <p>Interested in Visuospatial Perception</p>
       </div>
     </div>
    </div>
