--- a/index.html
+++ b/index.html
@@ -151,6 +151,9 @@
   textarea {
       resize: none;
   }
+  col-sm-4{
+  margin: 0 auto;
+  }
   </style>
 </head>
 <body id="myPage" data-spy="scroll" data-target=".navbar" data-offset="50">
