--- a/index.html
+++ b/index.html
@@ -337,14 +337,14 @@
     </div>
    </div>
 </div> <!--end Container section-->
-<br>
+
+<div id="contact" class="container">
   <h3 class="text-center">Reviews</h3>  
   <ul class="nav nav-tabs">
     <li class="active"><a data-toggle="tab" href="#home">Reviewer One</a></li>
     <li><a data-toggle="tab" href="#menu1">Reviewer Two </a></li>
     <li><a data-toggle="tab" href="#menu2">Reviewer Three</a></li>
   </ul>
-
   <div class="tab-content">
     <div id="home" class="tab-pane fade in active">
       <h2>Reviewer One, Relationship</h2>
