--- a/index.html
+++ b/index.html
@@ -163,23 +163,13 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>                        
       </button>
-      <a class="navbar-brand" href="#myPage">Logo</a>
+      <a class="navbar-brand" href="#myPage">Adam Santone, PhD</a>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#myPage">HOME</a></li>
-        <li><a href="#band">BAND</a></li>
-        <li><a href="#tour">TOUR</a></li>
-        <li><a href="#contact">CONTACT</a></li>
-        <li class="dropdown">
-          <a class="dropdown-toggle" data-toggle="dropdown" href="#">MORE
-          <span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <li><a href="#">Merchandise</a></li>
-            <li><a href="#">Extras</a></li>
-            <li><a href="#">Media</a></li> 
-          </ul>
-        </li>
+        <li><a href="#myPage">Home</a></li>
+        <li><a href="#about">About Me</a></li>
+        <li><a href="#reviews">Reviews</a></li>
         <li><a href="#"><span class="glyphicon glyphicon-search"></span></a></li>
       </ul>
     </div>
@@ -289,7 +279,7 @@
 </div>
 
 <!-- Container -->
-<div id="band" class="container text-center">
+<div id="about" class="container text-center">
   <h3>About Me</h3>
   <p><em>Science | Interactive 3D Graphics | Art | Gaming | Technology | Education</em></p>
   <p>
@@ -297,7 +287,7 @@
   </p>
 </div> <!--end Container section-->
 
-<div id="contact" class="container">
+<div id="reviews" class="container">
   <h3 class="text-center">Reviews</h3>  
   <ul class="nav nav-tabs">
     <li class="active"><a data-toggle="tab" href="#home">Reviewer One</a></li>
